--- a/style.css
+++ b/style.css
@@ -125,101 +125,6 @@ body {
     transform: scale(1.1);
 }
 
-.userList {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    max-width: 400px;
-    gap: 15px;
-    padding: 20px;
-    margin-top: 20px;
-}
-
-.userListItem {
-    display: flex;
-    align-items: center;
-    background-color: var(--ctp-surface0);
-    border: 1px solid var(--ctp-surface1);
-    border-radius: 10px;
-    padding: 15px;
-    width: 100%;
-    max-width: 350px;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.userListItem:hover {
-    transform: scale(1.03);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.userProfilePic {
-    width: 50px;
-    height: 50px;
-    margin-right: 15px;
-    border-radius: 50%;
-    border: 3px solid var(--ctp-lavender);
-    object-fit: cover;
-}
-
-.userInfo {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-}
-
-.userName {
-    font-weight: 600;
-    color: var(--ctp-blue);
-    margin-bottom: 5px;
-    font-size: 1em;
-    text-align: left;
-    text-decoration: none;
-    transition: color 0.3s ease;
-}
-
-.userName:hover {
-    color: var(--ctp-lavender);
-    text-decoration: underline;
-}
-
-.subscriberCount {
-    font-weight: 400;
-    color: var(--ctp-subtext0);
-    font-size: 0.9em;
-    text-align: left;
-}
-
-@media screen and (max-width: 480px) {
-    .top-bar {
-        flex-direction: column;
-        gap: 10px;
-    }
-
-    .navigation {
-        gap: 20px;
-    }
-
-    .userList {
-        max-width: 100%;
-        padding: 10px;
-    }
-
-    .userListItem {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
-
-    .userProfilePic {
-        margin-right: 0;
-        margin-bottom: 10px;
-    }
-
-    .userName, .subscriberCount {
-        text-align: center;
-    }
-}
 
 ::-webkit-scrollbar {
     width: 8px;
@@ -237,4 +142,20 @@ body {
 
 ::-webkit-scrollbar-thumb:hover {
     background-color: var(--ctp-surface0);
+}
+
+.link {
+    color: var(--ctp-text);
+    text-decoration: none;
+    transition: color 0.5s ease, text-decoration 0.5s ease; 
+}
+
+.link:hover {
+    color: red; 
+    text-decoration: underline;
+}
+
+a {
+    color: var(--ctp-text);
+    text-decoration: none;
 }
